# cxx-template

./: CMakeLists.txt  app.rc  conanfile.txt  main.cxx  readme.md
src/: app.cxx
src/cg/: init.cxx  init.h  post_scope.h
src/cg/os/: win.cxx  win.h
src/rc/: app.rc
